Fix bug when dragging on mobile/touchscreen, tweak styling

--- a/src/components/Guide/Guide.css
+++ b/src/components/Guide/Guide.css
@@ -1,12 +1,12 @@
 .guide {
-  margin: 1rem;
-  text-align: center;
+  margin: 0.5rem;
+}
+
+h2,
+.guide p:not(:last-of-type) {
+  margin-bottom: 0.5rem;
 }
 
 .guide p {
-  margin: 0.5rem 0;
-}
-
-.guide .pre-text {
-  margin-bottom: 1rem;
+  color: #888;
 }
