--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -32,7 +32,7 @@
 }
 
 .modal-header {
-  padding: 0.5rem 0.5rem;
+  padding: 0.5rem;
   display: flex;
   justify-content: flex-end;
   width: 100%;
