--- a/src/components/SignIn/SignIn.css
+++ b/src/components/SignIn/SignIn.css
@@ -28,5 +28,5 @@
 }
 
 .modal-form {
-  margin: 0.5rem 0.25rem;
+  margin: 0.5rem;
 }
